# ptbrush

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.dev.md  README.md  docker-entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: deploy.dockerhub.yml
ptbrush/: db.py  main.py  model.py  qbittorrent.py  version.py
ptbrush/config/: config.example.toml  config.py
ptbrush/ptsite/: __init__.py  mteam.py
ptbrush/site/: __init__.py  mteam.py
ptbrush/tasks/: __init__.py  services.py
ptbrush/web/: __init__.py  auth.py  config_io.py  config_schemas.py  config_serializer.py  routes.py  server.py
ptbrush/web/blueprints/: api_auth.py  api_config.py  api_stats.py
ptbrush/web/static/: index.html
ptbrush/web/static/css/: app.css
ptbrush/web/static/js/: api.js  main.js  router.js  utils.js
ptbrush/web/static/js/components/: AppShell.js  ConfigToolbar.js  HeadersEditor.js  PasswordCard.js  SitesEditor.js  SizeInput.js  SpeedInput.js  WorkTimePicker.js
ptbrush/web/static/js/views/: Config.js  Dashboard.js  Login.js
ptbrush/web/templates/: index.html
tests/: __init__.py  test_api_config.py  test_config.py  test_qbittorrent.py
