[project]
name = "ptbrush"
version = "0.1.0"
description = ""
authors = [
    { name = "huihuidehui", email = "kanhuihui@163.com" },
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "click>=8.1.7,<9.0.0",
    "qbittorrent-api>=2026.6.1,<2027.0.0",
    "pydantic>=2.9.2,<3.0.0",
    "pydantic-settings[toml]>=2.7.0,<3.0.0",
    "loguru>=0.7.2,<0.8.0",
    "requests>=2.32.3,<3.0.0",
    "prettytable>=3.12.0,<4.0.0",
    "peewee>=3.17.7,<4.0.0",
    "apscheduler>=3.10.4,<4.0.0",
    "jsonpath>=0.82.2,<0.83.0",
    "pytest>=8.3.4,<9.0.0",
    "pytest-mock>=3.14.0,<4.0.0",
    "flask>=3.1.0,<4.0.0",
    "flask-cors>=5.0.1,<6.0.0",
    "pandas>=2.2.3,<3.0.0",
    "plotly>=6.0.0,<7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ptbrush"]
